Fix spacing for all static pages
[#173271755]

--- a/src/main/resources/static/honeycrisp.css
+++ b/src/main/resources/static/honeycrisp.css
@@ -5217,7 +5217,7 @@ Sidebar Nav
 
 /* SHIBA */
 .intro-box {
-    padding: 1rem;
+    padding: 2.5rem 1rem 2.5rem 1rem;
     margin: 2.5rem 2rem 2.5rem 2rem;
     border: 2px solid #AAAAAA;
 }
